--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <div class="board"></div>
+    <div class="message"></div>
+    <button id="restart">Restart</button>
     <script src="script.js" defer></script>
 </body>
 </html>
